--- a/templates/index.html
+++ b/templates/index.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
 <html lang="en" ng-app="app">
     <head>
-    	<title>Flask-Angular-Webpack</title>
-    	<script src="static/bundle.js"></script>
-   	</head>
-    <body >
-    	<p>Index Page</p>
-      <div ng-view></div>
-	</body>
-	<footer>
-	</footer>
+      <title>Diabetes Manager</title>
+      <script src="static/bundle.js"></script>
+      <link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Roboto:400,700'>
+      <link rel="stylesheet" href="./static/css/angular-material.css"/>
+      <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+      <link rel="stylesheet" href="./static/css/app.css"/>
+    </head>
+    <body ng-view></body>
 </html>
