--- a/static/views/login.html
+++ b/static/views/login.html
@@ -1,5 +1,5 @@
-<md-content>
-  <div layout="row" layout-padding layout-wrap layout-margin ng-cloak layout-align="space-around">
+<md-content id="bad">
+  <div id="bad2" layout="row" layout-padding layout-wrap layout-margin ng-cloak layout-align="space-around">
     <md-card style="width:500px;" md-theme="{{ showDarkTheme ? 'dark-grey' : 'default' }}" md-theme-watch>
       <md-toolbar class="md-hue-2">
         <div class="md-toolbar-tools">
