--- a/static/views/newRecord.tmpl.html
+++ b/static/views/newRecord.tmpl.html
@@ -8,7 +8,7 @@
       </md-button>
     </div>
   </md-toolbar>
-  <form name="userForm" ng-submit="userForm.$valid && $scope.submit()">
+  <form name="userForm" ng-submit="userForm.$valid && submit()">
     <md-dialog-content>
       <div class="md-dialog-content">
         
