--- a/static/views/home.html
+++ b/static/views/home.html
@@ -1,19 +1,19 @@
 <md-toolbar class="md-hue-2">
 	<div class="md-toolbar-tools">
-		<md-button aria-label="Log Out">
-          Log Out
-        </md-button>
         <h2>
-          <span>Welcome {{user.first_name}}</span>
+          <span><span ng-if="!result">Welcome {{user.first_name}}</span> <span ng-if="result">, we are {{result.probability | percentage}} chance sure that you are <span ng-if="result.patient_is_diabetic === '0'">not </span>diabetic</span></span>
         </h2>
         <span flex></span>
+        <md-button ng-click="logout()" aria-label="Log Out">
+          Log Out
+        </md-button>
         <md-button class="md-icon-button" aria-label="Settings">
         	<i class="material-icons">settings</i>
         </md-button>
 	</div>
 </md-toolbar>
 
-<md-content flex layout-padding>
+<md-content id="bad" flex layout-padding>
 	<md-button class="md-fab" aria-label="Add" ng-click="addNewRecord()">
 		<i class="material-icons md-primary">note_add</i>
 	</md-button>
