--- a/static/views/newRecord.tmpl.html
+++ b/static/views/newRecord.tmpl.html
@@ -46,7 +46,7 @@
               <input required ng-model="form.mass">
             </md-input-container>
             <md-input-container class="md-block" flex-gt-sm>
-              <label>Height (cm)</label>
+              <label>Height (m)</label>
               <input required ng-model="form.height">
             </md-input-container>
           </div>
