--- a/static/views/login.html
+++ b/static/views/login.html
@@ -4,7 +4,7 @@
       <md-toolbar class="md-hue-2">
         <div class="md-toolbar-tools">
           <h2>
-            <span>Welcome to Diabetes Manager</span>
+            <span>Welcome to DiaBuddy</span>
           </h2>
         </div>
       </md-toolbar>
